# Rekall

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
.docs/: FEATURES.md  OVERVIEW.md  ROADMAP.md  SMOKE-TESTS.md
.husky/: pre-commit
asr/: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules.example  CMakeLists.txt  README.md  vcpkg.json
asr/config/: config.example.yaml  config.yaml
asr/docker/: Dockerfile
asr/docs/: smoke-openai-mode.md
asr/include/rekall/asr/audio/: ring_buffer.hpp  vad_segmenter.hpp
asr/include/rekall/asr/auth/: jwt_validator.hpp
asr/include/rekall/asr/config/: config.hpp
asr/include/rekall/asr/engine/: engine_factory.hpp  local_engine.hpp  model_registry.hpp  transcriber.hpp  transcription_engine.hpp  worker_pool.hpp
asr/include/rekall/asr/engine/openai/: openai_client.hpp  openai_engine.hpp  openai_http_client.hpp  wav_encoder.hpp
asr/include/rekall/asr/observ/: log_catalog.hpp  metrics.hpp  tracing.hpp
asr/include/rekall/asr/session/: session.hpp  session_manager.hpp  transcript_event.hpp
asr/include/rekall/asr/transport/: grpc_server.hpp  ws_server.hpp  ws_session.hpp
asr/include/rekall/asr/util/: correlation_id.hpp
asr/proto/: CMakeLists.txt  asr.proto
asr/scripts/: download_models.sh  format.sh  gen_dev_certs.sh
asr/src/: main.cpp
asr/src/audio/: ring_buffer.cpp  vad_segmenter.cpp
asr/src/auth/: jti_cache.cpp  jwt_validator.cpp
asr/src/config/: config.cpp
asr/src/engine/: engine_factory.cpp  local_engine.cpp  model_registry.cpp  transcriber.cpp  worker_pool.cpp
asr/src/engine/openai/: openai_engine.cpp  openai_http_client.cpp  wav_encoder.cpp
asr/src/observ/: log_catalog.cpp  metrics.cpp  tracing.cpp
asr/src/session/: session.cpp  session_manager.cpp  transcript_event.cpp
asr/src/transport/: grpc_health.cpp  grpc_server.cpp  ws_server.cpp  ws_session.cpp
asr/src/util/: correlation_id.cpp
asr/tests/: CMakeLists.txt
asr/tests/fakes/: fake_openai_client.hpp
asr/tests/integration/: CMakeLists.txt  graceful_shutdown_test.cpp  start_session_then_ws_test.cpp  test_helpers.hpp  ws_admission_at_capacity_test.cpp  ws_auth_failure_test.cpp
asr/tests/load/: CMakeLists.txt  concurrent_sessions.cpp
asr/tests/unit/: config_loader_test.cpp  correlation_id_test.cpp  engine_factory_test.cpp  jti_cache_test.cpp  jwt_validator_test.cpp  model_registry_test.cpp  openai_client_no_secret_leak_test.cpp  openai_engine_test.cpp  ring_buffer_test.cpp  transcript_event_test.cpp  vad_segmenter_test.cpp  wav_encoder_test.cpp  worker_pool_test.cpp
backend/: .env.example  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  others.cov
backend/docs/: docs.go  smoke-kat-live-notes.md  smoke-records.md  smoke-transcript-persistence.md  swagger.json  swagger.yaml
backend/migrations/: 000001_create_users.down.sql  000001_create_users.up.sql  000002_create_calls.down.sql  000002_create_calls.up.sql  000003_add_auth_fields_to_users.down.sql  000003_add_auth_fields_to_users.up.sql  000004_create_token_tables.down.sql  000004_create_token_tables.up.sql  000005_create_organizations.down.sql  (+24 more)
frontend/: .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.build.json  vite.config.ts  vitest.config.ts
intellikat/: .env.example  README.md  pyproject.toml
intellikat/config/: importlinter.toml
intellikat/config/prompts/: summarization_v1.txt
intellikat/docker/: Dockerfile
intellikat/migrations/: alembic.ini  env.py
intellikat/migrations/versions/: 0001_create_intellikat_tables.py
intellikat/scripts/: download_hf_model.sh  enqueue_reprocess.py  enqueue_test_message.py  grant_permissions.sql
intellikat/src/intellikat/: main.py
intellikat/src/intellikat/application/dto/: job_input.py  sentiment_result.py  summary_result.py
intellikat/src/intellikat/application/use_cases/: analyze_sentiment.py  process_insight_job.py  summarize_session.py
intellikat/src/intellikat/domain/: errors.py
intellikat/src/intellikat/domain/entities/: insight_job.py  sentiment.py  summary.py  transcript_segment.py  transcript_session.py
intellikat/src/intellikat/domain/ports/: insight_writer.py  job_consumer.py  sentiment_analyzer.py  summarizer.py  transcript_reader.py
intellikat/src/intellikat/domain/value_objects/: engine_snapshot.py  job_reference.py  prompt_version.py  sentiment_label.py
intellikat/src/intellikat/infrastructure/config/: prompt_loader.py  settings.py
intellikat/src/intellikat/infrastructure/di/: container.py
intellikat/src/intellikat/infrastructure/llm/: foundry_client.py  response_models.py  summarizer_adapter.py
intellikat/src/intellikat/infrastructure/logging/: catalog.py  logger.py  redaction.py
intellikat/src/intellikat/infrastructure/messaging/: servicebus_consumer.py
intellikat/src/intellikat/infrastructure/persistence/: engine.py  unit_of_work.py
intellikat/src/intellikat/infrastructure/persistence/orm/: base.py  intellikat_job_orm.py  segment_sentiment_orm.py  session_summary_orm.py  transcript_segment_orm.py  transcript_session_orm.py
intellikat/src/intellikat/infrastructure/persistence/repositories/: transcript_reader_pg.py
intellikat/src/intellikat/infrastructure/sentiment/: factory.py  hf_inference_client.py  hf_local_pipeline.py  label_map.py
intellikat/src/intellikat/interfaces/http/: app.py
intellikat/src/intellikat/interfaces/http/handlers/: health.py
intellikat/tests/: conftest.py
intellikat/tests/integration/: test_end_to_end.py  test_repositories_pg.py
intellikat/tests/unit/application/: test_analyze_sentiment.py  test_process_insight_job.py  test_summarize_session.py
intellikat/tests/unit/domain/value_objects/: test_job_reference.py
intellikat/tests/unit/infrastructure/: test_foundry_summarizer.py  test_hf_inference_client.py  test_logging_redaction.py  test_sentiment_factory.py  test_servicebus_consumer_parsing.py  test_settings_validation.py
intellikat/tests/unit/interfaces/: test_health.py
(+413 files in other folders)
